# pnp

./: .env.example  .gitignore  CLAUDE.md  OPTIMIZATION_SUMMARY.md  README.md  architecture.md  demo.py  interactive_demo.py  llm_questions_cache.json  main.py  pyproject.toml  requirements.txt  run.sh  run_game.py
game/: llm_questions.py  performance_monitor.py  scoring.py  ui.py
problems/: __init__.py  base.py  np_problems.py  npc_problems.py  nph_problems.py  p_problems.py
tests/: test_integration.py  test_llm_questions.py  test_main.py  test_problems.py  test_scoring.py  test_ui.py
